Null相关调整及JEI联动追加
- 迁移了来自 https://github.com/yiran1457/JEI_SlashBlade 的JEI信息显示
- 对各个地方的Null检查进行了全面检查，剔除了（在1.20.1或许有用但在1.21.1已）不需要的Null检查
- 清理了部分从1.20.1迁移至1.21.1后残留的未使用代码