@@ -17,18 +17,18 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class SlashBladeSmithingEmiRecipe extends EMISimpleRecipe {
-
+    
     private final SlashBladeSmithingRecipe recipe;
-
+    
     public SlashBladeSmithingEmiRecipe(SlashBladeSmithingRecipe recipe) {
         super(
-                createInputs(recipe),
-                createOutputs(recipe),
-                recipe.getId()
+            createInputs(recipe),
+            createOutputs(recipe),
+            recipe.getId()
         );
         this.recipe = recipe;
     }
-
+    
     private static List<EmiIngredient> createInputs(SlashBladeSmithingRecipe recipe) {
         List<EmiIngredient> inputs = new ArrayList<>();
         inputs.add(EmiIngredient.of(recipe.getTemplate()));
@@ -36,15 +36,15 @@ public class SlashBladeSmithingEmiRecipe extends EMISimpleRecipe {
         inputs.add(EmiIngredient.of(recipe.getAddition()));
         return inputs;
     }
-
+    
     private static List<EmiStack> createOutputs(SlashBladeSmithingRecipe recipe) {
         List<EmiStack> outputs = new ArrayList<>();
-
+        
         ItemStack[] additions = recipe.getAddition().getItems();
         if (additions.length == 0) {
             return outputs;
         }
-
+        
         ItemStack addition = additions[0];
         for (ItemStack template : recipe.getTemplate().getItems()) {
             for (ItemStack base : recipe.getBase().getItems()) {
@@ -55,10 +55,10 @@ public class SlashBladeSmithingEmiRecipe extends EMISimpleRecipe {
                 }
             }
         }
-
+        
         return outputs;
     }
-
+    
     private static Container createInput(ItemStack template, ItemStack base, ItemStack addition) {
         Container container = new SimpleContainer(3);
         container.setItem(0, template);
@@ -66,7 +66,7 @@ public class SlashBladeSmithingEmiRecipe extends EMISimpleRecipe {
         container.setItem(2, addition);
         return container;
     }
-
+    
     private static ItemStack assembleResultItem(Container input, SlashBladeSmithingRecipe recipe) {
         Minecraft minecraft = Minecraft.getInstance();
         ClientLevel level = minecraft.level;
@@ -76,22 +76,22 @@ public class SlashBladeSmithingEmiRecipe extends EMISimpleRecipe {
         RegistryAccess registryAccess = level.registryAccess();
         return recipe.assemble(input, registryAccess);
     }
-
+    
     @Override
     public EmiRecipeCategory getCategory() {
         return EMICompat.SLASHBLADE_SMITHING_CATEGORY;
     }
-
+    
     @Override
     public int getDisplayWidth() {
         return 112;
     }
-
+    
     @Override
     public int getDisplayHeight() {
         return 18;
     }
-
+    
     @Override
     public void addWidgets(WidgetHolder widgets) {
         widgets.addTexture(EmiTexture.EMPTY_ARROW, 62, 1);
@@ -103,10 +103,10 @@ public class SlashBladeSmithingEmiRecipe extends EMISimpleRecipe {
         widgets.addSlot(inputs.get(2), 36, 0);
         // 输出槽位
         if (!outputs.isEmpty()) {
-            widgets.addSlot(outputs.get(0), 94, 0).recipeContext(this);
+            widgets.addSlot(outputs.getFirst(), 94, 0).recipeContext(this);
         }
     }
-
+    
     public SlashBladeSmithingRecipe getRecipe() {
         return recipe;
     }
